--- a/pr6.html
+++ b/pr6.html
@@ -8,11 +8,7 @@
 <body>
 <header></header>
 <main>
-    <div id="menu">
-        <a href="index.html">Главная</a>
-        <a href="about_us.html">О нас</a>
-        <a href="contact.html">Контакты</a>
-    </div>
+   <h5>Заголовок.</h5><p>Текст параграфа</p>
 </main>
 <footer></footer>
 </body>
