--- a/task15/index.html
+++ b/task15/index.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-<div id="header">шапка сайта</div>
-<div id="menu">меню</div>
-<div id="content">контент</div>
-<div id="footer">низ сайта</div>
+<div id="blok1">Блок 1</div>
+<div id="blok2">Блок 2</div>
+<div id="blok3">Блок 3</div>
 </body>
 </html>
